perf: benchmark large streaming image pipelines
Constraint: Issue #166 needs evidence before #165 API design and #1 OCR preprocessing.

Rejected: Adding public Okio APIs in this PR | benchmark evidence should precede API changes.

Confidence: high

Scope-risk: moderate

Directive: Treat Scrimage Okio and suspended boundaries as lifecycle features unless future benchmarks prove latency, throughput, or managed-allocation gains.

Tested: ./gradlew :bluetape4k-images-benchmark:benchmarkBenchmarkCompile --console=plain; ./gradlew :bluetape4k-images-benchmark:benchmarkLargeStreamingBenchmark -Pvips.impl=java25 --console=plain; JMH -prof gc addendum; xmllint; identify; jq empty; git diff --check.

Not-tested: Java 21 JNI rows and Linux CI benchmark rows.